# toy-cpu-pathtracing

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: claude-code-review.yml  claude.yml  pr-agent.yml
color/: Cargo.toml  README.md
color/src/: color.rs  eotf.rs  gamut.rs  lib.rs  tone_map.rs
color/src/f32/: color.rs  eotf.rs  gamut.rs  tone_map.rs
color/src/f64/: color.rs  eotf.rs  gamut.rs  tone_map.rs
macros/: Cargo.toml
math/: Cargo.toml  README.md
math/src/: bounds.rs  coordinate_system.rs  lib.rs  light_sample_context.rs  matrix.rs  normal.rs  point.rs  ray.rs  safe_math.rs  transform.rs  vector.rs
nix/: cargo.nix  dev-shell.nix  shell.nix  toy-cpu-pathtracing.nix
renderer/: Cargo.toml  README.md
renderer/assets/sky/: scythian_tombs_2_1k.exr
renderer/src/: camera.rs  main.rs  renderer.rs  sampler.rs  scene.rs  scene_loader.rs  sensor.rs  tone_map.rs
renderer/src/renderer/: albedo_renderer.rs  base_renderer.rs  common.rs  mis_renderer.rs  nee_renderer.rs  normal_renderer.rs  pt_renderer.rs
renderer/src/sampler/: random_sampler.rs  sobol_matrices.rs  z_sobol_sampler.rs
renderer/src/scene/: bvh.rs  geometry.rs  light_sampler.rs  material.rs  primitive.rs  scene_0.rs  scene_1.rs  scene_10.rs  scene_11.rs  scene_12.rs  scene_13.rs  scene_14.rs  scene_15.rs  scene_16.rs  scene_17.rs  scene_18.rs  scene_19.rs  scene_2.rs  scene_3.rs  scene_4.rs  scene_5.rs  scene_6.rs  scene_7.rs  scene_8.rs  scene_9.rs
renderer/src/scene/geometry/: impls.rs  intersection.rs  repository.rs  traits.rs  triangle_mesh.rs
renderer/src/scene/geometry/impls/: triangle_mesh.rs
renderer/src/scene/primitive/: bvh.rs  create_desc.rs  directional_light.rs  emissive_single_triangle.rs  emissive_triangle_mesh.rs  environment_light.rs  impls.rs  point_light.rs  repository.rs  samples.rs  single_triangle.rs  spot_light.rs  traits.rs  triangle_mesh.rs
renderer/src/scene/primitive/impls/: directional_light.rs  emissive_single_triangle.rs  emissive_triangle_mesh.rs  environment_light.rs  point_light.rs  single_triangle.rs  spot_light.rs  triangle_mesh.rs
renderer/tests/: pt_nee_comparison_test.rs  regression_test.rs  renderer_consistency_test.rs
rgb_to_spec/: Cargo.toml  README.md
rgb_to_spec/python/: main.py  pyproject.toml
rgb_to_spec/src/: data.rs  init.rs  lib.rs  main.rs  matrix.rs
rgb_to_spec/tests/: cie_data.rs  test.rs
scene/: Cargo.toml  README.md
scene/src/: bvh.rs  geometry.rs  lib.rs  light_sampler.rs  material.rs  primitive.rs  samples.rs  scene.rs  texture.rs
scene/src/geometry/: intersection.rs  repository.rs  traits.rs
scene/src/geometry/impls/: triangle_mesh.rs
scene/src/material/: bsdf.rs  common.rs  edf.rs  impls.rs  material.rs  parameter.rs  traits.rs
scene/src/material/bsdf/: conductor.rs  dielectric.rs  generalized_schlick.rs  lambert.rs  normalized_lambert.rs
scene/src/material/edf/: uniform.rs
scene/src/material/impls/: emissive_material.rs  glass_material.rs  lambert_material.rs  metal_material.rs  plastic_material.rs  simple_pbr_clearcoat_material.rs  simple_pbr_material.rs
scene/src/primitive/: bvh.rs  create_desc.rs  repository.rs  samples.rs  traits.rs
scene/src/primitive/impls/: directional_light.rs  emissive_single_triangle.rs  emissive_triangle_mesh.rs  environment_light.rs  point_light.rs  spot_light.rs  (+2 more)
scene/src/texture/: config.rs  float_texture.rs  loader.rs  mod.rs  normal_texture.rs  rgb_texture.rs  sampler.rs
spectrum/: Cargo.toml  README.md  build.rs
spectrum/src/: lib.rs  presets.rs  rgb_sigmoid_polynomial.rs  sampled_spectrum.rs  spectrum.rs
spectrum/src/spectrum/: black_body_spectrum.rs  constant_spectrum.rs  densely_sampled_spectrum.rs  piecewise_linear_spectrum.rs  rgb_albedo_spectrum.rs  rgb_illuminant_spectrum.rs  rgb_unbounded_spectrum.rs
toy-cpu-pathtracing/: Cargo.toml
toy-cpu-pathtracing/src/: camera.rs  color.rs  filter.rs  main.rs  math.rs  renderer.rs  sampler.rs  scene.rs  scene_loader.rs  spectrum.rs
toy-cpu-pathtracing/src/color/: eotf.rs  gamut.rs  tone_map.rs
toy-cpu-pathtracing/src/scene/: bvh.rs  light_sampler.rs  primitive.rs
toy-cpu-pathtracing/src/scene/geometry/: triangle_mesh.rs
toy-cpu-pathtracing/src/scene/primitive/: directional_light.rs  emissive_single_triangle.rs  emissive_triangle_mesh.rs  environment_light.rs  point_light.rs  single_triangle.rs  spot_light.rs  triangle_mesh.rs
toy-cpu-pathtracing/src/spectrum/: black_body_spectrum.rs  constant_spectrum.rs  densely_sampled_spectrum.rs  piecewise_linear_spectrum.rs  presets.rs  rgb_albedo_spectrum.rs  rgb_illuminant_spectrum.rs  rgb_sigmoid_polynomial.rs  rgb_unbounded_spectrum.rs  sampled_spectrum.rs
util_macros/: Cargo.toml  README.md
util_macros/src/: lib.rs
