[workspace]
members = ["color", "math", "renderer", "scene", "spectrum", "util_macros"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
image = "0.25.6"
glam = "0.30.3"
clap = { version = "4.5.37", features = ["derive"] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"
rayon = "1.10.0"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
tobj = "4.0.3"

color = { path = "color" }
math = { path = "math" }
scene = { path = "scene" }
spectrum = { path = "spectrum" }
util_macros = { path = "util_macros" }
