[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color.workspace = true
glam.workspace = true
image = "0.25.6"
math.workspace = true
rand = "0.9.1"
rayon.workspace = true
spectrum.workspace = true
tobj = "4.0.3"
util_macros.workspace = true
