[package]
name = "spectrum"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = "1.14"
color.workspace = true
glam.workspace = true
math.workspace = true
rgb_to_spec.workspace = true
util_macros.workspace = true

[build-dependencies]
anyhow.workspace = true
color.workspace = true
glam.workspace = true
rayon.workspace = true

[lints]
workspace = true
